# SimOR

./: .gitignore  README.md  path_config.txt  path_nonmotorizedinputs.txt  runSIMOR.bat  setup_environment.bat
configs/: accessibility.csv  annotate_households_cdap.csv  annotate_persons.csv  annotate_persons_workplace.csv  auto_ownership.yaml  auto_ownership_preprocessor.csv  constants.yaml  destination_choice_size_terms.csv  disaggregate_accessibility.yaml  external_non_mandatory_destination_sample.csv  joint_tour_scheduling_annotate_tours_preprocessor.csv  mandatory_tour_frequency.csv  mandatory_tour_scheduling.yaml  network_los.yaml  non_mandatory_tour_frequency.csv  non_mandatory_tour_frequency_annotate_persons_preprocessor.csv  non_mandatory_tour_frequency_coefficients_PTYPE_FULL.csv  non_mandatory_tour_frequency_coefficients_PTYPE_SCHOOL.csv  non_mandatory_tour_scheduling_annotate_tours_preprocessor.csv  outputs.yaml  park_and_ride_lot_choice.csv  park_and_ride_lot_choice.yaml  park_and_ride_lot_choice_coeffs.csv  park_and_ride_lot_choice_preprocessor.csv  parking_location_choice.csv  parking_location_choice.yaml  school_escorting_preprocessor_inbound.csv  school_escorting_preprocessor_outbound.csv  school_escorting_preprocessor_outbound_cond.csv  school_location.csv  school_location_sample.csv  settings.yaml  stop_frequency_annotate_tours_preprocessor.csv  stop_frequency_eatout.csv  stop_frequency_escort.csv  stop_frequency_shopping.csv  stop_frequency_social.csv  stop_frequency_univ.csv  tour_mode_choice.csv  (+14 more)
ext_dependencies/maz_skimming/: pyproject.toml
(+314 files in other folders)
