[project]
name = "maz-skimming"
version = "0.1.0"
description = "Python environment for MAZ-to-MAZ and MAZ-to-stop non-motorized skimming"
requires-python = ">=3.10,<3.11"

dependencies = [
    "numpy>=1.24,<2",
    "pandas>=2.2,<3",
    "geopandas>=1.0,<2",
    "pandana==0.7",
    "pyyaml>=6.0,<7",
    "shapely>=2.0,<3",
]
